# vins_foxglove

./: .gitignore  CMakeLists.txt  README.md  build.sh  clear_project.sh
apps/: CMakeLists.txt  app.cpp  pose_eval.cpp  record_data.cpp  run_msckf.cpp  run_msckf_rs.cpp
apps/ov_sensors/: vi_dataset.cpp  vi_dataset.h
apps/ov_sensors/serial_imu/: IImuDriver.h  ImuDriver.cpp  ImuDriver.h  ImuSample.h  JY901Parser.cpp  SerialTransport.cpp  SerialTransport.h
config/euroc_mav/: estimator_config.yaml
config/kaist/: estimator_config.yaml
config/kaist_vio/: estimator_config.yaml
config/ours/: estimator_config copy.yaml  estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain copy.yaml
config/rpng_aruco/: estimator_config.yaml
config/rpng_ironsides/: estimator_config.yaml
config/rpng_plane/: estimator_config.yaml
config/rpng_sim/: estimator_config.yaml
config/rs_d455/: estimator_config.yaml
config/rs_t265/: estimator_config.yaml
config/tum_vi/: estimator_config.yaml
config/uzhfpv_indoor_45/: estimator_config.yaml
config/uzhfpv_outdoor/: estimator_config.yaml
config/uzhfpv_outdoor_45/: estimator_config.yaml
docs/: dev-coding-style.dox  gs-tutorial.dox
misc/: how_to_visualize.md  msckf.json  msckf2.json
ov_core/: CMakeLists.txt
ov_core/cmake/: ROS1.cmake
ov_core/src/: test_tracking.cpp
ov_core/src/utils/: sensor_data.h
ov_init/launch/: dynamic.launch  mle.launch
ov_init/src/: test_dynamic_mle.cpp
ov_init/src/init/: InertialInitializer.cpp
ov_msckf/: CMakeLists.txt
ov_msckf/cmake/: ROS1.cmake
ov_msckf/launch/: serial.launch  simulation.launch  subscribe.launch  subscribe.launch.py
ov_msckf/src/: record_data.cpp  run_msckf.cpp  run_msckf_ros.cpp  run_subscribe_msckf.cpp  test_camera.cpp
ov_msckf/src/core/: VioManager.cpp
ov_msckf/src/foxglove/: FGVisualizer.cpp  FGVisualizer.h  dash_board.cpp
ov_msckf/src/serial/: imu_serial copy.cpp  imu_serial.cpp  imu_serial.h
scripts/: calib_generation.py
src/: CMakeLists.txt
src/ov_core/utils/: opencv_yaml_parse.h  print.cpp  print.h
src/ov_msckf/calibration/: aprilgrid.cpp  aprilgrid.h  apriltags.cpp  apriltags.h  frame_quality_evaluator.cpp  frame_quality_evaluator.h
src/ov_msckf/cmake/: ROS1.cmake
src/ov_msckf/core/: VioManager.cpp  VioManager.h  VioManagerHelper.cpp  VioManagerOptions.h
src/ov_msckf/foxglove/: FGVisualizer.cpp  FGVisualizer.h  dash_board.h  pose_estimation.cpp  pose_estimation.h
src/ov_msckf/utils/: io_utils.h  memory_utils.h
src/ov_sensors/camera_v4l2/: CameraFrame.h  ICameraDriver.h  V4L2CameraDriver.h
src/ov_sensors/serial_imu/: ImuParser.h  JY901Parser.h
